<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ArticleDetailActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Form_Article"
        android:id="@+id/textArticleName" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Form_Prix"
            android:id="@+id/textPrix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Form_Monnaie"
            android:id="@+id/textMonnaie" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:numStars="4"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_alignParentRight="true"
                android:id="@+id/bar_Note"
                android:isIndicator="false"/>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Form_Description"
        android:id="@+id/textDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Form_Visualize_Button_Delete"
            android:layout_gravity="right"
            android:src="@android:drawable/ic_menu_delete"
            android:onClick="onClickDeleteButton"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Form_Visualize_Button_Modify"
            android:layout_gravity="right"
            android:src="@android:drawable/ic_menu_edit"
            android:onClick="onClickEditButton"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_search"
            android:onClick="onClickButtonUrl"
            android:id="@+id/buttonUrl"

            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAcheter"
                android:onClick="onClickBuyingButton"
                android:layout_weight="1"
                android:textOff="@string/Form_Button_A_Acheter"
                android:textOn="@string/Form_Button_Acheter"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>

